# BianchiIX_visualisations

./: bIVIX_visualisations.ipynb  bIX_visualisations.ipynb  bI_visualisations.ipynb  bV_visualisations.ipynb  bianchiIX_100p_downside.txt  bianchiIX_100p_upside.txt  bianchiIX_anisotropic_100p_downside.txt  bianchiIX_anisotropic_100p_upside.txt  bianchiIX_anisotropic_300p_downside.txt  bianchiIX_anisotropic_300p_upside.txt  bianchiIX_anisotropic_eta0.018000_omega_2_0.001000_1000p_downside.txt  bianchiIX_anisotropic_eta0.018000_omega_2_0.100000_1000p_downside.txt  bianchiIX_anisotropic_eta_0.003600_omega_2_0.000000_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_downside.txt  bianchiIX_anisotropic_eta_0.003600_omega_2_0.000000_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_upside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_1000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_1000p_upside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.000000_dbm_0.000000_3000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.000000_dbm_0.000000_3000p_upside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_1000p_upside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_dbp_0.000000_dbm_0.000000_bp_0.000000_bm_0.000000_3000p_downside.txt  bianchiIX_anisotropic_eta_0.018000_omega_2_0.000010_s_0.010000_1000p_downside.txt  (+58 more)
